--- a/Site.Master
+++ b/Site.Master
@@ -48,6 +48,7 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Home</a></li> 
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/itemList">List</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Pages/AddUser">Create</a></li>
                     </ul>
                 </div>
             </div>
